app/assets/stylesheets/i_love_pie.css
/* ... */
@media (max-width: 768px) {
  .navbar-inner{
    margin: 0 10px;
  }
}









body{
  background-color: #F5F2ED;
}

#page-header{
  min-height: 60px;
}

#page-content{
  min-height: calc(100% - 108px);
}

#content{
  background-color: #FFF;
  padding: 0 10px;
  min-height: 100%;
  padding-bottom: 20px;
}

#footer {
    background: none repeat scroll 0 0 #D44413;
    border-top: 1px solid gray;
    box-shadow: 0 1px 0 #292929 inset;
    color: #999999;
    font-size: 12px;
    margin-top: 30px;
    padding: 15px 0;
    margin-bottom: -20px;
}

.current_page {
  background-color: #A5360F;
}

.brand:hover,
.brand:focus,
.brand > a:hover,
.brand > a:focus {
  text-decoration: none;
}

.navbar{
  border-bottom: 1px solid gray;
}

html, body{
  height: 98%;
  padding: 0px;
}

